# dev_ws_mini_project

./: .gitignore  README.md  RPI-install.sh  param.yaml  pc-install.sh
Calibrate_camera/: ost.txt  ost.yaml
Installation/: RPI-install.sh  depthai-install.sh  pc-install.sh
mini_project/: package.xml  setup.py
mini_project/mini_project/: vision_reciever_node.py  vision_sender_node.py
ros-ws/launch/: startupOnPc.launch.py
ros-ws/src/mini_project/: package.xml  setup.py
ros-ws/src/mini_project/mini_project/: Movement_node.py  movement_node.py  n_display.py  n_object_detection.py  n_plan_move.py  object_detection_publisher.py  object_detection_subscriber.py  planner_node.py  vision_reciever_node.py  vision_sender_node.py
ros-ws/src/my_robot_bringup/: CMakeLists.txt  package.xml
ros-ws/src/my_robot_bringup/launch/: startLocalTest.launch.py  startNormal.py  startRemotePc.py  startTurtlebot.py  startupOnPc.launch.py
ros-ws/src/my_robot_interfaces/: CMakeLists.txt  package.xml
ros-ws/src/my_robot_interfaces/msg/: CustomObjectInfo.msg
sh_scripts/: pull.sh  testPublisherNode.sh  testSubscriberNode.sh
test-programs/: Mono&MobilenetSSD&Depth.py  MonoStereoCameraReading.py  ObjectAndDistance.py  calib_18443010E199AB0F00.json  distanceMapping.py  trackingObjects.py
